[project]
name = "ethresearch-socials-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.2",
    "atproto>=0.0.58",
    "beautifulsoup4>=4.13.3",
    "openai>=1.61.1",
    "praw>=7.8.1",
    "requests>=2.32.3",
    "streamlit>=1.42.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
]
